Fixed spacing issues for css-two-column-layout.

--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -1,9 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 h1,
 h3 {
   font-family: "Karla", Arial, sans-serif;
@@ -23,22 +17,29 @@ p {
 .row {
   display: flex;
   text-align: center;
+  margin: 0 auto;
 }
 
 .column-header {
-  width: 45%;
+  width: 55%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .column-one-half {
-  width: 50%;
-  text-align: left;
-  margin-left: 40px;
-  margin-right: 40px;
+  display: flex;
+  flex-basis: 50%;
+  margin: 20px 70px 20px 70px;
 }
 
-img {
-  position: relative;
-  bottom: 60px;
+.paragraph {
+  width: 300px;
+  text-align: left;
+}
+
+.container {
+  display: flex;
+  flex-flow: column wrap;
 }
 
 #learnMoreButton {
